--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,8 @@ uuid = { version = "1.18.1", features = ["v4"] }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 futures = "0.3.31"
-# tokio-postgres = "0.7.15"
-# postgres-types = { version = "0.2.11", features = ["derive"] }
 diesel = { version = "2.3.3", features = ["postgres", "64-column-tables"] }
-# refinery = { version = "0.9.0", features = ["tokio-postgres"] }
+diesel_migrations = { version = "2.3.0", features = ["postgres"] }
+
+[lints.clippy]
+pedantic = "warn"
